--- a/_pages/en/open-source-codes.html
+++ b/_pages/en/open-source-codes.html
@@ -16,7 +16,7 @@ permalink: /en/open-source-codes.html
 <p>
   Search open projects that are developed by different levels of Canadian public administrations (federal, provincial, municipal and aboriginal).
   You may also add a new open source code to the following catalog, or update the information of a code that is already there, using the <a href="./open-source-code-form.html">Open Source Code Form</a>.<br>
-  <strong>Need help?</strong> Check our user guide on <a href="./ore-docs.html">how to use the Open Resource Exchange platform</a> for more information on how you can benefit from this service.
+  <strong>Need help?</strong> Check our user guide on <a href="#">how to use the Open Resource Exchange platform</a> for more information on how you can benefit from this service.
 </p><br>
 
 {% include codeTable.html %}
