--- a/_pages/en/open-source-softwares.html
+++ b/_pages/en/open-source-softwares.html
@@ -15,7 +15,7 @@ permalink: /en/open-source-softwares.html
 <p>
   Search open source software that are used by different levels of Canadian public administrations (federal, provincial, municipal and aboriginal).
   You may also add a new software to the following catalog, or update the information of a software that is already there, using the <a href="./open-source-software-form.html">Open Source Software Form</a>.<br>
-  <strong>Need help?</strong> Check our user guide on <a href="./ore-docs.html">how to use the Open Resource Exchange platform</a> for more information on how you can benefit from this service.
+  <strong>Need help?</strong> Check our user guide on <a href="#">how to use the Open Resource Exchange platform</a> for more information on how you can benefit from this service.
 </p><br>
 
 {% include softwareTable.html %}
