--- a/_pages/en/open-source-standards.html
+++ b/_pages/en/open-source-standards.html
@@ -15,7 +15,7 @@ permalink: /en/open-source-standards.html
 <p>
   Search open standards that are used by different levels of Canadian public administrations (federal, provincial, municipal and aboriginal).
   You may also add a new open standard to the following catalog, or update the information of a standard that is already there, using the <a href="./open-source-standard-form.html">Open Standards Form</a>.<br>
-  <strong>Need help?</strong> Check our user guide on <a href="./ore-docs.html">how to use the Open Resource Exchange platform</a> for more information on how you can benefit from this service.
+  <strong>Need help?</strong> Check our user guide on <a href="#">how to use the Open Resource Exchange platform</a> for more information on how you can benefit from this service.
 </p><br>
 
 {% include standardTable.html %}
