--- a/_pages/fr/logiciels-libres.html
+++ b/_pages/fr/logiciels-libres.html
@@ -15,7 +15,7 @@ permalink: /fr/logiciels-libres.html
 <p>
   Consultez la liste des logiciels libres utilisés par les administrations publiques canadiennes du niveau fédéral, provincial, municipal et autochtone.
   Vous pouvez modifier les informations d’un logiciel existant dans la liste ou ajouter un nouveau logiciel libre en soumettant le <a href="./logiciel-libre-formulaire.html">Formulaire de Logiciel Libre</a>.<br>
-  <strong>Besoin d’aide?</strong> Consulter la documentation <a href="./ero-docs.html">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour plus d’informations sur comment bénéficier de ce service.
+  <strong>Besoin d’aide?</strong> Consulter la documentation <a href="#">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour plus d’informations sur comment bénéficier de ce service.
 </p><br>
 
 {% include softwareTable.html %}
