--- a/_pages/fr/codes-source-ouverts.html
+++ b/_pages/fr/codes-source-ouverts.html
@@ -15,7 +15,7 @@ permalink: /fr/codes-source-ouverts.html
 <p>
   Consultez la liste des différents projets ouverts élaborés par des administrations publiques canadiennes du niveau fédéral, provincial, municipal et autochtone.
   Vous pouvez modifier les informations d’un projet existant dans la liste ou ajouter un nouveau projet ouvert en soumettant le <a href="./code-source-ouvert-formulaire.html">Formulaire de Code Source Ouvert</a>.<br>
-  <strong>Besoin d’aide?</strong> Consulter la documentation <a href="./ero-docs.html">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour plus d’informations sur comment bénéficier de ce service.
+  <strong>Besoin d’aide?</strong> Consulter la documentation <a href="#">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour plus d’informations sur comment bénéficier de ce service.
 </p><br>
 
 {% include codeTable.html %}
