--- a/_pages/fr/normes-ouvertes.html
+++ b/_pages/fr/normes-ouvertes.html
@@ -14,7 +14,7 @@ permalink: /fr/normes-ouvertes.html
 <p>
   Consultez la liste des normes ouvertes utilisées par les administrations publiques canadiennes du niveau fédéral, provincial, municipal et autochtone.
   Vous pouvez modifier les informations d’une norme existante dans la liste ou ajouter une nouvelle norme ouverte en soumettant le <a href="./norme-ouverte-formulaire.html">Formulaire des Normes Ouvertes</a>.<br>
-  <strong>Besoin d’aide?</strong> Consulter la documentation <a href="./ero-docs.html">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour plus d’informations sur comment bénéficier de ce service.
+  <strong>Besoin d’aide?</strong> Consulter la documentation <a href="#">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour plus d’informations sur comment bénéficier de ce service.
 </p><br>
 
 {% include standardTable.html %}
