Baseline for future project pages & templates

--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -48,6 +48,13 @@ permalink: /en/index.html
         </section>
       </div>
 
+      <div class="col-md-6">
+        <section>
+          <h3><a href="{{ site.data.i18n.general.nav.futureProject.link[page.lang] }}"><span style="background:yellow;">{{ site.data.i18n.general.nav.futureProject[page.lang] }}</span></a></h3>
+          <p><span style="background:yellow;">Lorem ipsum (homepage description english)</span></p>
+        </section>
+      </div>
+
     </div>
   </section>
 
