--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -48,6 +48,13 @@ permalink: /fr/index.html
         </section>
       </div>
 
+      <div class="col-md-6">
+        <section>
+          <h3><a href="{{ site.data.i18n.general.nav.futureProject.link[page.lang] }}">{{ site.data.i18n.general.nav.futureProject[page.lang] }}</a></h3>
+          <p>Lorem ipsum (homepage description french)</p>
+        </section>
+      </div>
+
     </div>
   </section>
 
