update osc page

--- a/_pages/en/open-source-codes.html
+++ b/_pages/en/open-source-codes.html
@@ -7,16 +7,17 @@ permalink: /en/open-source-codes.html
 
 <h1 property="name" id="wb-cont">Open Source Code</h1>
 <p>
-  Open source code commonly refers to software that uses an open development process. This software is released under a license where
-  the copyright holder grants anyone permission to use, modify, change or redistribute the code for any purpose. This open source process
-  is an example of open collaboration where everyone benefits from the development of technology that solves real issues.
+  Open source code commonly refers to a software that is released under a license granting anyone permission to use, modify, change or redistribute the code for any purpose.
+  This open source process is an example of open collaboration where everyone benefits from the development of technological tools that solve real issues.
 </p>
-
-<h2 property="name">Software Projects</h2>
 <p>
-  Search open projects that are developed by different levels of Canadian public administrations (federal, provincial, municipal and aboriginal).
-  You may also add a new open source code to the following catalog, or update the information of a code that is already there, using the <a href="./open-source-code-form.html">Open Source Code Form</a>.<br>
-  <strong>Need help?</strong> Check our user guide on <a href="#">how to use the Open Resource Exchange platform</a> for more information on how you can benefit from this service.
+  Search the catalog for open source projects developed by different levels of Canadian public administrations.
+</p>
+<p>
+  You may also <strong>add</strong> or <strong>update</strong> an open source code using the <a href="./open-source-code-form.html">Open Source Code Form</a>.
+</p>
+<p>
+  <strong>Need help?</strong> Check our user guide on <a href="#">how to use the Open Resource Exchange platform</a>.
 </p><br>
 
 {% include codeTable.html %}
