update the introduction of the services

--- a/_pages/en/open-source-codes.html
+++ b/_pages/en/open-source-codes.html
@@ -14,7 +14,7 @@ permalink: /en/open-source-codes.html
   Search the catalog for open source projects developed by different levels of Canadian public administrations.
 </p>
 <p>
-  You may also <strong>add</strong> or <strong>update</strong> an open source code using the <a href="./open-source-code-form.html">Open Source Code Form</a>.
+  You may also <strong>add</strong> a project or <strong>update</strong> its data using using the <a href="./open-source-code-form.html">Open Source Code Form</a>.
 </p>
 <p>
   <strong>Need help?</strong> Check our user guide on <a href="#">how to use the Open Resource Exchange platform</a>.
