--- a/_pages/en/open-source-standards.html
+++ b/_pages/en/open-source-standards.html
@@ -10,12 +10,14 @@ permalink: /en/open-source-standards.html
   Open standards refer to file formats, protocols and application interfaces that can be implemented by everyone.
   The standard specification is publically available and the standardization is open and transparent.
 </p>
-
-<h2 property="name">Software Projects</h2>
 <p>
-  Search open standards that are used by different levels of Canadian public administrations (federal, provincial, municipal and aboriginal).
-  You may also add a new open standard to the following catalog, or update the information of a standard that is already there, using the <a href="./open-source-standard-form.html">Open Standards Form</a>.<br>
-  <strong>Need help?</strong> Check our user guide on <a href="#">how to use the Open Resource Exchange platform</a> for more information on how you can benefit from this service.
+  Search the catalog for open standards that are used by different levels of Canadian public administrations.
+</p>
+<p>
+  You may also <strong>add</strong> a standard or <strong>update</strong> its data using the <a href="./open-source-standard-form.html">Open Standards Form</a>.
+</p>
+<p>
+  <strong>Need help?</strong> Check our user guide on <a href="#">how to use the Open Resource Exchange platform</a>.
 </p><br>
 
 {% include standardTable.html %}
