--- a/_pages/fr/normes-ouvertes.html
+++ b/_pages/fr/normes-ouvertes.html
@@ -9,14 +9,15 @@ permalink: /fr/normes-ouvertes.html
 <p>
   Une norme ou standard ouvert réfère à tout format de données interopérable et tout protocole de communication, d’interconnexion ou d’échange dont les spécifications techniques sont publiques sans aucune restriction d’accès ou de mise en oeuvre.
 </p>
-
-<h2 property="name">Projets</h2>
 <p>
-  Consultez la liste des normes ouvertes utilisées par les administrations publiques canadiennes du niveau fédéral, provincial, municipal et autochtone.
-  Vous pouvez modifier les informations d’une norme existante dans la liste ou ajouter une nouvelle norme ouverte en soumettant le <a href="./norme-ouverte-formulaire.html">Formulaire des Normes Ouvertes</a>.<br>
-  <strong>Besoin d’aide?</strong> Consulter la documentation <a href="#">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour plus d’informations sur comment bénéficier de ce service.
-</p><br>
-
+  Consultez la liste des normes ouvertes utilisées par les administrations publiques canadiennes.
+</p>
+<p>
+  Vous pouvez <strong>ajouter</strong> un standard ou <strong>modifier</strong> ses informations en utilisant le <a href="./norme-ouverte-formulaire.html">Formulaire des Normes Ouvertes</a>.
+</p>
+<p>
+  <strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="#">comment utiliser la plateforme Échange de Ressources Ouvert</a>.
+</p>
 {% include standardTable.html %}
 
 <p>Les données sont aussi disponible en <a href="../standard.json" target="_blank">format JSON</a>.</p>
