--- a/_pages/en/open-source-softwares.html
+++ b/_pages/en/open-source-softwares.html
@@ -7,15 +7,17 @@ permalink: /en/open-source-softwares.html
 
 <h1 property="name" id="wb-cont">Open Source Software</h1>
 <p>
-  Open source software refers to software that is released under a license where the copyright holder grants anyone permission to use, modify, change or redistribute its source code no matter the purpose.
+  Open source software refers to a software that is released under a license grating anyone permission to use, modify, change or redistribute its source code for any purpose.
   This open source process is an example of open collaboration where everyone benefits from the development of technological tools that solve real issues.
 </p>
-
-<h2 property="name">Software Projects</h2>
 <p>
-  Search open source software that are used by different levels of Canadian public administrations (federal, provincial, municipal and aboriginal).
-  You may also add a new software to the following catalog, or update the information of a software that is already there, using the <a href="./open-source-software-form.html">Open Source Software Form</a>.<br>
-  <strong>Need help?</strong> Check our user guide on <a href="#">how to use the Open Resource Exchange platform</a> for more information on how you can benefit from this service.
+  Search the catalog for open source software that are used by different levels of Canadian public administrations.
+</p>
+<p>
+  You may also <strong>add</strong> a software or <strong>update</strong> its data using the <a href="./open-source-software-form.html">Open Source Software Form</a>.
+</p>
+<p>
+  <strong>Need help?</strong> Check our user guide on <a href="#">how to use the Open Resource Exchange platform</a>.
 </p><br>
 
 {% include softwareTable.html %}
