--- a/_pages/fr/codes-source-ouverts.html
+++ b/_pages/fr/codes-source-ouverts.html
@@ -7,16 +7,18 @@ permalink: /fr/codes-source-ouverts.html
 
 <h1 property="name" id="wb-cont">Code Source Ouvert</h1>
 <p>
-  Le code source ouvert fait référence au logiciel dont le développement suit un processus ouvert. La licence du projet permet d’accéder librement au code source, de créer des travaux dérivés et de le redistribuer.
-  Ce processus de développement ouvert est généralement le résultat de la collaboration entre plusieurs parties prenantes pour l’élaboration de solutions technologiques à des problèmes communs.
+  Le code source ouvert fait référence à un logiciel dont la licence permet d’accéder librement au code source, de créer des travaux dérivés et de le redistribuer.
+  Ce processus de développement ouvert est généralement le résultat d’un travail collaboratif pour la mise en place de solutions technologiques qui répondent à des problèmes communs.
 </p>
-
-<h2 property="name">Projets</h2>
 <p>
-  Consultez la liste des différents projets ouverts élaborés par des administrations publiques canadiennes du niveau fédéral, provincial, municipal et autochtone.
-  Vous pouvez modifier les informations d’un projet existant dans la liste ou ajouter un nouveau projet ouvert en soumettant le <a href="./code-source-ouvert-formulaire.html">Formulaire de Code Source Ouvert</a>.<br>
-  <strong>Besoin d’aide?</strong> Consulter la documentation <a href="#">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour plus d’informations sur comment bénéficier de ce service.
-</p><br>
+  Consultez la liste des différents projets ouverts élaborés par des administrations publiques canadiennes.
+</p>
+<p>
+  Vous pouvez <strong>ajouter</strong> un projet ou <strong>modifier</strong> ses informations en utilisant le <a href="./code-source-ouvert-formulaire.html">Formulaire de Code Source Ouvert</a>.
+</p>
+<p>
+  <strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="#">comment utiliser la plateforme Échange de Ressources Ouvert</a>.
+</p>
 
 {% include codeTable.html %}
 
