--- a/_pages/fr/logiciels-libres.html
+++ b/_pages/fr/logiciels-libres.html
@@ -7,18 +7,19 @@ permalink: /fr/logiciels-libres.html
 
 <h1 property="name" id="wb-cont">Logiciels libres</h1>
 <p>
-  Un logiciel libre est un logiciel dont le développement de son code source suit un processus ouvert. La licence du logiciel permet d’accéder librement à son code source, de créer des travaux dérivés et de le redistribuer.
-  Ce processus de développement ouvert est un exemple de collaboration entre les programmeurs pour développer des outils technologiques qui répondent à des besoins communs.
+  Un logiciel libre est un logiciel dont le développement de son code source suit un processus ouvert.
+  La licence du logiciel permet d’accéder librement à son code source, de créer des travaux dérivés et de le redistribuer.
 </p>
-
-<h2 property="name">Projets</h2>
 <p>
-  Consultez la liste des logiciels libres utilisés par les administrations publiques canadiennes du niveau fédéral, provincial, municipal et autochtone.
-  Vous pouvez modifier les informations d’un logiciel existant dans la liste ou ajouter un nouveau logiciel libre en soumettant le <a href="./logiciel-libre-formulaire.html">Formulaire de Logiciel Libre</a>.<br>
-  <strong>Besoin d’aide?</strong> Consulter la documentation <a href="#">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour plus d’informations sur comment bénéficier de ce service.
-</p><br>
+  Consultez la liste des logiciels libres utilisés par les administrations publiques canadiennes.
+</p>
+<p>
+  Vous pouvez <strong>ajouter</strong> un logiciel ou <strong>modifier</strong> ses informations en utilisant le <a href="./logiciel-libre-formulaire.html">Formulaire de Logiciel Libre</a>.
+</p>
+<p>
+  <strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="#">comment utiliser la plateforme Échange de Ressources Ouvert</a>.
+</p>
 
 {% include softwareTable.html %}
 
 <p>Les données sont aussi rendu disponible en <a href="../software.json" target="_blank">format JSON</a> pour utilisation dans d'autres applications.</p>
-
