--- a/_pages/en/open-source-softwares.html
+++ b/_pages/en/open-source-softwares.html
@@ -17,7 +17,7 @@ permalink: /en/open-source-softwares.html
   You may also <strong>add</strong> a software or <strong>update</strong> its data using the <a href="./open-source-software-form.html">Open Source Software Form</a>.
 </p>
 <p>
-  <strong>Need help?</strong> Check our user guide on <a href="#">how to use the Open Resource Exchange platform</a>.
+  <strong>Need help?</strong> Check our user guide on <a href="./ore-docs.html">how to use the Open Resource Exchange platform</a>.
 </p><br>
 
 {% include softwareTable.html %}
