--- a/_pages/fr/codes-source-ouverts.html
+++ b/_pages/fr/codes-source-ouverts.html
@@ -17,7 +17,7 @@ permalink: /fr/codes-source-ouverts.html
   Vous pouvez <strong>ajouter</strong> un projet ou <strong>modifier</strong> ses informations en utilisant le <a href="./code-source-ouvert-formulaire.html">Formulaire de Code Source Ouvert</a>.
 </p>
 <p>
-  <strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="#">comment utiliser la plateforme Échange de Ressources Ouvert</a>.
+  <strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="./ero-docs.html">comment utiliser la plateforme Échange de Ressources Ouvert</a>.
 </p>
 
 {% include codeTable.html %}
