--- a/_pages/fr/normes-ouvertes.html
+++ b/_pages/fr/normes-ouvertes.html
@@ -16,7 +16,7 @@ permalink: /fr/normes-ouvertes.html
   Vous pouvez <strong>ajouter</strong> un standard ou <strong>modifier</strong> ses informations en utilisant le <a href="./norme-ouverte-formulaire.html">Formulaire des Normes Ouvertes</a>.
 </p>
 <p>
-  <strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="#">comment utiliser la plateforme Échange de Ressources Ouvert</a>.
+  <strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="./ero-docs.html">comment utiliser la plateforme Échange de Ressources Ouvert</a>.
 </p>
 {% include standardTable.html %}
 
