--- a/_pages/en/open-source-codes.html
+++ b/_pages/en/open-source-codes.html
@@ -17,7 +17,7 @@ permalink: /en/open-source-codes.html
   You may also <strong>add</strong> a project or <strong>update</strong> its data using using the <a href="./open-source-code-form.html">Open Source Code Form</a>.
 </p>
 <p>
-  <strong>Need help?</strong> Check our user guide on <a href="#">how to use the Open Resource Exchange platform</a>.
+  <strong>Need help?</strong> Check our user guide on <a href="./ore-docs.html">how to use the Open Resource Exchange platform</a>.
 </p><br>
 
 {% include codeTable.html %}
