--- a/_pages/en/open-source-standards.html
+++ b/_pages/en/open-source-standards.html
@@ -17,7 +17,7 @@ permalink: /en/open-source-standards.html
   You may also <strong>add</strong> a standard or <strong>update</strong> its data using the <a href="./open-source-standard-form.html">Open Standards Form</a>.
 </p>
 <p>
-  <strong>Need help?</strong> Check our user guide on <a href="#">how to use the Open Resource Exchange platform</a>.
+  <strong>Need help?</strong> Check our user guide on <a href="./ore-docs.html">how to use the Open Resource Exchange platform</a>.
 </p><br>
 
 {% include standardTable.html %}
