--- a/_pages/fr/logiciels-libres.html
+++ b/_pages/fr/logiciels-libres.html
@@ -17,7 +17,7 @@ permalink: /fr/logiciels-libres.html
   Vous pouvez <strong>ajouter</strong> un logiciel ou <strong>modifier</strong> ses informations en utilisant le <a href="./logiciel-libre-formulaire.html">Formulaire de Logiciel Libre</a>.
 </p>
 <p>
-  <strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="#">comment utiliser la plateforme Échange de Ressources Ouvert</a>.
+  <strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="./ero-docs.html">comment utiliser la plateforme Échange de Ressources Ouvert</a>.
 </p>
 
 {% include softwareTable.html %}
