--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -26,12 +26,12 @@ permalink: /en/index.html
     <section class="panel panel-info">
 
       <header class="panel-heading">
-        <a href="./open-source-codes.html" style="color: inherit !important; text-decoration: none !important"><h5 class="panel-title">Open Source Code</h5></a>
+        <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><h5 class="panel-title">Open Source Code</h5></a>
       </header>
 
       <div class="panel-body" style="padding-bottom: 33px !important">
         <div class="col-md-3" style="color: #31708f; font-size: 50px">
-          <a href="./open-source-codes.html" style="color: inherit !important; text-decoration: none !important"><i class="fas fa-code"></i></a>
+          <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><i class="fas fa-code"></i></a>
         </div>
         <div class="col-md-9">
           <p>Search open source projects and code repositories.</p>
@@ -44,12 +44,12 @@ permalink: /en/index.html
   <div class="col-md-4">
     <section class="panel panel-success">
       <header class="panel-heading">
-        <a href="./open-source-softwares.html" style="color: inherit !important; text-decoration: none !important"><h5 class="panel-title">Open Source Software</h5></a>
+        <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><h5 class="panel-title">Open Source Software</h5></a>
       </header>
 
       <div class="panel-body" style="padding-bottom: 0px !important">
         <div class="col-md-3" style="color: #3c763d; font-size: 50px">
-          <a href="./open-source-softwares.html" style="color: inherit !important; text-decoration: none !important"><i class="fa fa-cog"></i></a>
+          <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><i class="fa fa-cog"></i></a>
         </div>
         <div class="col-md-9">
           <p>Search open source software platforms used by Canadian public administrators.</p>
@@ -63,12 +63,12 @@ permalink: /en/index.html
     <section class="panel panel-warning">
 
       <header class="panel-heading">
-        <a href="./open-source-standards.html" style="color: inherit !important; text-decoration: none !important"><h5 class="panel-title">Open Standards</h5></a>
+        <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><h5 class="panel-title">Open Standards</h5></a>
       </header>
 
       <div class="panel-body" style="padding-bottom: 33px !important">
         <div class="col-md-3" style="color: #8a6d3b; font-size: 50px">
-          <a href="./open-source-standards.html" style="color: inherit !important; text-decoration: none !important"><i class="glyphicon glyphicon-list-alt"></i></a>
+          <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><i class="glyphicon glyphicon-list-alt"></i></a>
         </div>
         <div class="col-md-9">
           <p>Search open standards used by Canadian public administrators.</p>
